# scripts

./: .gitignore  LICENSE  ghcenv  grepper.hs  hoogler.hs  readpath.hs  scripts.cabal  writepath.hs
