cabal-version:       >=1.10
name:                scripts
version:             0.1.0.0
synopsis:            Scripts and utilities using unix command line tools
license-file:        LICENSE
author:              Simon Beaumont
maintainer:          datalligator@icloud.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable grepper
  main-is:             grepper.hs
  build-depends:       base
                     , cmdargs
                     , shelly -any
                     , text
  default-language:    Haskell2010

executable readpaths
  main-is:             readpaths.hs
  build-depends:       base
  default-language:    Haskell2010

  